k8s/overlays/dev/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: job-asset-service
spec:
  hosts:
    - "*"
  gateways:
    - job-asset-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: job-asset-service
            port:
              number: 80
